codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__mouse_tests__composer_mouse_click_edit.snap
---
source: tui/src/bottom_pane/chat_composer/mouse_tests.rs
expression: "format!(\"cursor: {:?}\\n{}\", composer.cursor_pos(area), terminal.backend())"
---
cursor: Some((11, 1))
"╭────────────────────────────╮"
"│ › hello, orld              │"
"╰────────────────────────────╯"
"           100% context left  "
