codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__mouse_tests__composer_mouse_click_large_paste_selection.snap
---
source: tui/src/bottom_pane/chat_composer/mouse_tests.rs
expression: "format!(\"selection: {:?}\\nmodifiers: {selection_modifiers:?}\\ncursor: {:?}\\n{}\",\ncomposer.draft.textarea.selection_range(), composer.cursor_pos(area),\nterminal.backend(),)"
---
selection: Some(0..27)
modifiers: [BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED]
cursor: Some((4, 1))
"╭──────────────────────────────────────────────────────────╮"
"│ › [Pasted Content 1012 chars]                            │"
"╰──────────────────────────────────────────────────────────╯"
"                                         100% context left  "
