codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__mouse_tests__composer_mouse_newline_selection.snap
---
source: tui/src/bottom_pane/chat_composer/mouse_tests.rs
expression: "format!(\"selection: {:?}\\nmodifiers: {selection_modifiers:?}\\ncursor: {:?}\\n{}\",\ncomposer.draft.textarea.selection_range(), composer.cursor_pos(area),\nterminal.backend(),)"
---
selection: Some(3..4)
modifiers: [NONE, NONE, NONE, BOLD | UNDERLINED | REVERSED]
cursor: Some((7, 1))
"╭────────────────────────────╮"
"│ › abc                      │"
"│   def                      │"
"╰────────────────────────────╯"
"           100% context left  "
