codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__mouse_tests__composer_mouse_selection_after_tab.snap
---
source: tui/src/bottom_pane/chat_composer/mouse_tests.rs
expression: "format!(\"selection: {:?}\\nmodifiers: {selection_modifiers:?}\\ncursor: {:?}\\n{}\",\ncomposer.draft.textarea.selection_range(), composer.cursor_pos(area),\nterminal.backend(),)"
---
selection: Some(2..4)
modifiers: [NONE, NONE, BOLD | UNDERLINED | REVERSED, BOLD | UNDERLINED | REVERSED]
cursor: Some((8, 1))
"╭────────────────────────────╮"
"│ › a bc                     │"
"╰────────────────────────────╯"
"           100% context left  "
